[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/TowerDefenseGame.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/menu_button.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Icons/store.png" type="Texture" id=3]
[ext_resource path="res://Scenes/TDLevels/TDLevel1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Icons/pause.png" type="Texture" id=5]
[ext_resource path="res://Assets/Audio/landing.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/start_game.ogg" type="AudioStream" id=7]
[ext_resource path="res://fonts/kenvector_future_thin_small.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/gray_bar.png" type="Texture" id=9]
[ext_resource path="res://Assets/Icons/heart.png" type="Texture" id=10]
[ext_resource path="res://Scenes/TowerShop.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/PauseMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://fonts/kenvector_future_thin.tres" type="DynamicFont" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="TDLevel1" parent="." instance=ExtResource( 4 )]

[node name="TowersNode" type="Node2D" parent="."]

[node name="Base" type="ColorRect" parent="."]
visible = false
margin_left = 1240.0
margin_top = 560.0
margin_right = 1280.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseArea" type="Area2D" parent="Base" groups=[
"Base",
]]

[node name="BaseCollision" type="CollisionShape2D" parent="Base/BaseArea"]
position = Vector2( 20, 16 )
shape = SubResource( 1 )

[node name="PauseButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 78.0
margin_bottom = 78.0
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseHealthSection" type="TextureRect" parent="."]
margin_left = 88.0
margin_top = 24.0
margin_right = 278.0
margin_bottom = 69.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseHealthLabel" type="Label" parent="."]
margin_left = 136.0
margin_top = 32.0
margin_right = 243.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Health:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseLabel" type="Label" parent="."]
margin_left = 248.0
margin_top = 32.0
margin_right = 264.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WafersSection" type="TextureRect" parent="."]
margin_left = 1000.0
margin_top = 24.0
margin_right = 1190.0
margin_bottom = 69.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" type="TextureRect" parent="."]
margin_left = 93.0
margin_top = 24.0
margin_right = 133.0
margin_bottom = 64.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WafersLeftLabel" type="Label" parent="."]
margin_left = 1008.0
margin_top = 32.0
margin_right = 1121.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Wafers:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashLabel" type="Label" parent="."]
margin_left = 1128.0
margin_top = 32.0
margin_right = 1179.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 544.0
margin_top = 16.0
margin_right = 800.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 13 )
text = "Start Wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerShopButton2" type="Button" parent="."]
margin_left = 1202.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 78.0
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerShop" parent="." instance=ExtResource( 11 )]
visible = false
margin_left = 1036.26
margin_top = 88.0
margin_right = 1036.26
margin_bottom = 88.0

[node name="DebugLabel" type="Label" parent="."]
margin_left = 609.509
margin_top = 64.0
margin_right = 649.509
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="MenuButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="PauseMenu" parent="." instance=ExtResource( 12 )]
visible = false

[node name="PlaceTowerAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="StartWaveAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="TowerShopButton2" to="." method="_on_TowerShopButton_pressed"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
